# rust-kernel-template

./: .gitignore  Cargo.toml  README.md  justfile
linkers/: arm.ld  riscv64.ld  x86_64.ld
src/: main.rs
src/arch/: mod.rs
src/arch/arm/: mod.rs  uart.rs
src/arch/riscv64/: alloc.rs  mod.rs  paging.rs  uart.rs
src/arch/x86_64/: boot2.S  mod.rs  uart.rs
targets/: arm.json  riscv64.json  x86_64.json
