[package]
name = "rust-kernel-template"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
lto = false
opt-level = 0

[profile.release]
panic = "abort"

[dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.3.2"

[target.'cfg(target_arch = "arm")'.dependencies]
arm-pl011-uart = "0.3.1"
